@@ -1,11 +1,13 @@
 package com.iomt.dashboard.components.health;
 
+import com.iomt.dashboard.components.device.DeviceEntity;
 import lombok.RequiredArgsConstructor;
 import org.bson.Document;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.data.domain.Sort;
 import org.springframework.data.mongodb.core.MongoTemplate;
+import org.springframework.data.mongodb.core.query.Criteria;
 import org.springframework.data.mongodb.core.query.Query;
 import org.springframework.stereotype.Service;
 
@@ -21,11 +23,14 @@ import java.util.stream.Collectors;
  * Service: Phát hiện và quản lý phiên đo (Session).
  *
  * Luồng xử lý:
- * 1. Doc ALL records tu final_result, sort theo ingested_at ASC
- * 2. Quet lan luot: neu 2 ban ghi cach nhau > 15 phut → phiên mới
+ * 1. Doc ALL records tu final_result, sort theo timestamp ASC (thoi gian ESP32 do)
+ * 2. Quet lan luot: neu 2 ban ghi cach nhau > 1 phut → phiên mới
  * 3. Moi phiên: tinh avg, label chinh (mode cua predicted_label)
- * 4. active = (hieu thoi gian tu ban ghi cuoi cung den hien tai < 15 phut)
+ * 4. active = (hieu thoi gian tu ban ghi cuoi cung den hien tai < 1 phut)
  * 5. LUU: chi save/update phiên moi hoac phiên active
+ *
+ * Chú ý: Dùng trường "timestamp" (thời gian ESP32 đo) thay vì "ingested_at"
+ * (thời gian server nhận) để tránh fragmentation do network delay.
  */
 @Service
 @RequiredArgsConstructor
@@ -33,8 +38,8 @@ public class SessionService {
 
     private static final Logger log = LoggerFactory.getLogger(SessionService.class);
 
-    /** Khoảng gap (ms) de nhan biet phiên mới: 15 phút */
-    private static final long SESSION_GAP_MS = 15 * 60 * 1000L;
+    /** Khoảng gap (ms) de nhan biet phiên mới: 1 phút */
+    private static final long SESSION_GAP_MS = 60 * 1000L;
 
     /** ESP32 gửi timestamp ở múi giờ Việt Nam UTC+7 */
     private static final ZoneOffset VN_ZONE = ZoneOffset.ofHours(7);
@@ -44,90 +49,171 @@ public class SessionService {
 
     private final MongoTemplate mongoTemplate;
 
+    /**
+     * Lay danh sach MAC cua thiet bi ma user da dang ky.
+     */
+    private List<String> getUserDeviceMacs(String userId) {
+        if (userId == null || userId.isBlank()) {
+            return List.of();
+        }
+        Query query = new Query(Criteria.where("user_id").is(userId));
+        List<DeviceEntity> devices = mongoTemplate.find(query, DeviceEntity.class, "devices");
+        return devices.stream()
+                .map(d -> d.getMacAddress() != null ? d.getMacAddress().toLowerCase() : null)
+                .filter(Objects::nonNull)
+                .toList();
+    }
+
     // ================================================================
     // Public API
     // ================================================================
 
     /**
      * Tra ve danh sach TAT CA phiên đo, sap xep theo startTime DESC.
+     * Chi tra ve session ma co ban ghi thuoc device cua user.
      */
-    public List<SessionDto> getAllSessions() {
+    public List<SessionDto> getAllSessions(String userId) {
+        List<String> userMacs = getUserDeviceMacs(userId);
+        if (userMacs.isEmpty()) {
+            return List.of();
+        }
+
+        // Lay sessions co it nhat 1 ban ghi thuoc user devices
         Query query = new Query().with(Sort.by(Sort.Direction.DESC, "start_time"));
-        List<SessionEntity> entities = mongoTemplate.find(query, SessionEntity.class, "sessions");
-        return entities.stream().map(this::toDto).toList();
+        List<SessionEntity> allEntities = mongoTemplate.find(query, SessionEntity.class, "sessions");
+
+        // Loc chi nhung session co mac thuoc user
+        return allEntities.stream()
+                .filter(entity -> {
+                    // Kiem tra session co ban ghi thuoc user devices khong
+                    List<Document> relatedDocs = findSessionRecords(entity, userMacs);
+                    return !relatedDocs.isEmpty();
+                })
+                .map(entity -> {
+                    SessionDto dto = toDto(entity);
+                    // Chi lay nhung ban ghi thuoc user devices
+                    dto.setRecordCount((int) findSessionRecords(entity, userMacs).size());
+                    return dto;
+                })
+                .collect(Collectors.toList());
     }
 
     /**
      * Tra ve danh sach phiên trong khoang N gio gan day.
+     * Chi tra ve session co ban ghi thuoc device cua user.
      */
-    public List<SessionDto> getSessionsInRange(int hours) {
+    public List<SessionDto> getSessionsInRange(int hours, String userId) {
+        List<String> userMacs = getUserDeviceMacs(userId);
+        if (userMacs.isEmpty()) {
+            return List.of();
+        }
+
         Instant timeAgo = Instant.now().minus(hours, ChronoUnit.HOURS);
         Query query = new Query(
-                new org.springframework.data.mongodb.core.query.Criteria("start_time").gte(timeAgo)
+                Criteria.where("start_time").gte(timeAgo)
         ).with(Sort.by(Sort.Direction.DESC, "start_time"));
-        List<SessionEntity> entities = mongoTemplate.find(query, SessionEntity.class, "sessions");
-        return entities.stream().map(this::toDto).toList();
+        List<SessionEntity> allEntities = mongoTemplate.find(query, SessionEntity.class, "sessions");
+
+        return allEntities.stream()
+                .filter(entity -> {
+                    List<Document> relatedDocs = findSessionRecords(entity, userMacs);
+                    return !relatedDocs.isEmpty();
+                })
+                .map(entity -> {
+                    SessionDto dto = toDto(entity);
+                    dto.setRecordCount((int) findSessionRecords(entity, userMacs).size());
+                    return dto;
+                })
+                .collect(Collectors.toList());
     }
 
     /**
      * Tra ve PHIEN ACTIVE cuoi cung (dang theo doi, chua bi ngat).
-     * active = true khi ban ghi cuoi cung cach hien tai < 15 phut.
+     * Chi tra ve session cua user devices.
      */
-    public SessionDto getLatestActiveSession() {
-        Query query = new Query(
-                new org.springframework.data.mongodb.core.query.Criteria("active").is(true)
-        ).with(Sort.by(Sort.Direction.DESC, "start_time")).limit(1);
-        SessionEntity entity = mongoTemplate.findOne(query, SessionEntity.class, "sessions");
-        if (entity == null) {
+    public SessionDto getLatestActiveSession(String userId) {
+        List<String> userMacs = getUserDeviceMacs(userId);
+        if (userMacs.isEmpty()) {
             return null;
         }
-        return toDtoWithRecords(entity);
+
+        Query query = new Query(
+                Criteria.where("active").is(true)
+        ).with(Sort.by(Sort.Direction.DESC, "start_time"));
+        List<SessionEntity> activeEntities = mongoTemplate.find(query, SessionEntity.class, "sessions");
+
+        // Tim session active co ban ghi thuoc user devices
+        for (SessionEntity entity : activeEntities) {
+            List<Document> relatedDocs = findSessionRecords(entity, userMacs);
+            if (!relatedDocs.isEmpty()) {
+                SessionDto dto = toDto(entity);
+                dto.setRecordCount(relatedDocs.size());
+                // Them records chi tiet
+                dto.setRecords(relatedDocs.stream().map(this::docToRecord).collect(Collectors.toList()));
+                return dto;
+            }
+        }
+        return null;
+    }
+
+    /**
+     * Lay cac ban ghi cua session chi thuoc user devices.
+     */
+    private List<Document> findSessionRecords(SessionEntity entity, List<String> userMacs) {
+        Instant startUtc = entity.getStartTime();
+        Instant endUtc = entity.getEndTime();
+
+        LocalDateTime startVn = LocalDateTime.ofInstant(startUtc, VN_ZONE);
+        LocalDateTime endVn = LocalDateTime.ofInstant(endUtc, VN_ZONE);
+
+        String startTsStr = startVn.format(TS_PARSE_FMT);
+        String endTsStr = endVn.format(TS_PARSE_FMT);
+
+        Query query = new Query(
+                Criteria.where("timestamp").gte(startTsStr).lte(endTsStr)
+                        .and("mac_address").in(userMacs)
+        ).with(Sort.by(Sort.Direction.ASC, "timestamp"));
+
+        return mongoTemplate.find(query, Document.class, "final_result");
     }
 
     /**
      * Tra ve session active — query TRỰC TIẾP final_result mà không qua sessions collection.
-     * Fixes race condition: frontend không phụ thuộc vào rebuild timing.
-     *
-     * Logic:
-     * 1. Lay ban ghi moi nhat trong final_result
-     * 2. Neu co gap > 15 phut so voi ban ghi truoc do → session moi
-     * 3. Tra ve session hien tai (tinh toan tai thoi diem query, khong dung rebuild)
+     * Chi tra ve session thuoc user devices.
      */
-    public SessionDto getLiveSession() {
-        Instant now = Instant.now();
-        Instant sessionGapBoundary = now.minus(SESSION_GAP_MS, ChronoUnit.MILLIS);
+    public SessionDto getLiveSession(String userId) {
+        List<String> userMacs = getUserDeviceMacs(userId);
+        if (userMacs.isEmpty()) {
+            return null;
+        }
 
-        // Lay 1 ban ghi moi nhat de biet thoi diem gap
-        Query latestQuery = new Query()
-                .with(Sort.by(Sort.Direction.DESC, "ingested_at"))
-                .limit(1);
+        Instant now = Instant.now();
+
+        // Lay 1 ban ghi moi nhat thuoc user devices
+        Query latestQuery = new Query(
+                Criteria.where("mac_address").in(userMacs)
+        ).with(Sort.by(Sort.Direction.DESC, "timestamp")).limit(1);
         Document latestDoc = mongoTemplate.findOne(latestQuery, Document.class, "final_result");
 
         if (latestDoc == null) {
             return null;
         }
 
-        Instant latestIngestedAt = parseIngestedAt(latestDoc.get("ingested_at"));
+        Instant latestTs = parseTimestamp(latestDoc.get("timestamp"));
 
-        // Xac dinh session active: latest - SESSION_GAP_MS < latestIngestedAt
-        // active = (now - latestIngestedAt) < 15 phut
-        boolean isActive = Math.abs(now.toEpochMilli() - latestIngestedAt.toEpochMilli()) < SESSION_GAP_MS;
+        // Xac dinh session active: (now - latestTs) < 1 phut
+        boolean isActive = Math.abs(now.toEpochMilli() - latestTs.toEpochMilli()) < SESSION_GAP_MS;
 
         if (!isActive) {
-            // Khong co session active
             return null;
         }
 
-        // Lay ALL records cua session active:
-        // Session active = tat ca records tu latestIngestedAt nguoc lai den khi gap > 15 phut
-        // Lay records tu (latestIngestedAt - SESSION_GAP_MS) den now
-        Instant sessionStart = latestIngestedAt.minus(SESSION_GAP_MS, ChronoUnit.MILLIS);
-
-        // Loc chi nhung records co ingested_at >= sessionStart
-        // (vi nhung record cu hon sessionStart co nghia la thuoc session cu)
+        // Lay ALL records cua session active thuoc user devices
+        Instant sessionStart = latestTs.minus(SESSION_GAP_MS, ChronoUnit.MILLIS);
         Query recordsQuery = new Query(
-                new org.springframework.data.mongodb.core.query.Criteria("ingested_at").gte(sessionStart)
-        ).with(Sort.by(Sort.Direction.ASC, "ingested_at"));
+                Criteria.where("timestamp").gte(sessionStart)
+                        .and("mac_address").in(userMacs)
+        ).with(Sort.by(Sort.Direction.ASC, "timestamp"));
 
         List<Document> docs = mongoTemplate.find(recordsQuery, Document.class, "final_result");
 
@@ -135,17 +221,16 @@ public class SessionService {
             return null;
         }
 
-        // Xac dinh chinh xac start/end cua session tu docs thuc te
-        Instant actualStart = parseIngestedAt(docs.get(0).get("ingested_at"));
-        Instant actualEnd = parseIngestedAt(docs.get(docs.size() - 1).get("ingested_at"));
+        // Xac dinh chinh xac start/end cua session
+        Instant actualStart = parseTimestamp(docs.get(0).get("timestamp"));
+        Instant actualEnd = parseTimestamp(docs.get(docs.size() - 1).get("timestamp"));
 
-        // Loc nhung record thuc su thuoc session (nghĩa là: ko co gap > 15 phut)
+        // Loc nhung record thuc su thuoc session
         List<Document> sessionDocs = new ArrayList<>();
         Instant currentSessionStart = actualStart;
         for (Document doc : docs) {
-            Instant docTime = parseIngestedAt(doc.get("ingested_at"));
+            Instant docTime = parseTimestamp(doc.get("timestamp"));
             if (Math.abs(docTime.toEpochMilli() - currentSessionStart.toEpochMilli()) > SESSION_GAP_MS) {
-                // Gap > 15 phut → bat dau session moi, dung lai
                 break;
             }
             sessionDocs.add(doc);
@@ -154,25 +239,23 @@ public class SessionService {
             }
         }
 
-        // Build SessionDto (khong luu vao sessions collection — chi tra ve)
+        // Build SessionDto
         SessionDto dto = new SessionDto();
-        dto.setSessionId("live-" + latestIngestedAt.toEpochMilli());
-        dto.setStartTime(sessionDocs.isEmpty() ? actualStart : parseIngestedAt(sessionDocs.get(0).get("ingested_at")));
-        dto.setEndTime(sessionDocs.isEmpty() ? actualEnd : parseIngestedAt(sessionDocs.get(sessionDocs.size() - 1).get("ingested_at")));
+        dto.setSessionId("live-" + latestTs.toEpochMilli());
+        dto.setStartTime(sessionDocs.isEmpty() ? actualStart : parseTimestamp(sessionDocs.get(0).get("timestamp")));
+        dto.setEndTime(sessionDocs.isEmpty() ? actualEnd : parseTimestamp(sessionDocs.get(sessionDocs.size() - 1).get("timestamp")));
         dto.setRecordCount(sessionDocs.size());
         dto.setActive(true);
 
-        // Tinh avg tu sessionDocs
         dto.setAvgBpm(computeAvg(sessionDocs, "bpm"));
         dto.setAvgSpo2(computeAvg(sessionDocs, "spo2"));
         dto.setAvgBodyTemp(computeAvg(sessionDocs, "body_temp"));
         dto.setAvgGsrAdc(computeAvg(sessionDocs, "gsr_adc"));
         dto.setLabel(computeModeLabel(sessionDocs));
 
-        // Chuyen thanh HealthRecordDto
         List<SessionDto.HealthRecordDto> records = sessionDocs.stream()
                 .map(this::docToRecord)
-                .toList();
+                .collect(Collectors.toList());
         dto.setRecords(records);
 
         return dto;
@@ -219,6 +302,35 @@ public class SessionService {
         return toDtoWithRecords(entity);
     }
 
+    /**
+     * Tra ve chi tiet 1 phiên (kem danh sach records) chi thuoc user devices.
+     */
+    public SessionDto getSessionById(String sessionId, String userId) {
+        List<String> userMacs = getUserDeviceMacs(userId);
+        if (userMacs.isEmpty()) {
+            return null;
+        }
+
+        Query query = new Query(
+                new org.springframework.data.mongodb.core.query.Criteria("session_id").is(sessionId)
+        );
+        SessionEntity entity = mongoTemplate.findOne(query, SessionEntity.class, "sessions");
+        if (entity == null) {
+            return null;
+        }
+
+        // Lay ban ghi chi thuoc user devices
+        List<Document> relatedDocs = findSessionRecords(entity, userMacs);
+        if (relatedDocs.isEmpty()) {
+            return null;
+        }
+
+        SessionDto dto = toDto(entity);
+        dto.setRecordCount(relatedDocs.size());
+        dto.setRecords(relatedDocs.stream().map(this::docToRecord).collect(Collectors.toList()));
+        return dto;
+    }
+
     // ================================================================
     // Session Rebuild (goi tu Scheduler)
     // ================================================================
@@ -228,76 +340,46 @@ public class SessionService {
      * LUU ket qua vao bang sessions.
      *
      * Chay moi 30 giay (tu SessionScheduler).
+     *
+     * Strategy: Xoa toan bo sessions cu, tao lai tu dau.
+     * Vi moi detectSessions() tao UUID ngau nhien, nen khong the
+     * match sessions cu vs moi -> chi can insert all.
      */
     public void rebuildSessions() {
         log.info("[SessionService] Starting session rebuild...");
 
-        // 1. Doc ALL records tu final_result, sort ASC
-        Query query = new Query().with(Sort.by(Sort.Direction.ASC, "ingested_at"));
+        // 1. Doc ALL records tu final_result, sort ASC theo timestamp (thoi gian ESP32 do)
+        Query query = new Query().with(Sort.by(Sort.Direction.ASC, "timestamp"));
         List<Document> docs = mongoTemplate.find(query, Document.class, "final_result");
 
         if (docs.isEmpty()) {
             log.info("[SessionService] final_result is empty, no sessions to build.");
+            // Xoa sessions cu neu final_result trong
+            mongoTemplate.remove(new Query(), SessionEntity.class, "sessions");
             return;
         }
 
-        // 2. Phat hien phiên bang cach gap > 15 phut
+        // 2. Phat hien phiên bang cach gap > 1 phut
         List<SessionGroup> groups = detectSessions(docs);
         log.info("[SessionService] Detected {} sessions from {} records.", groups.size(), docs.size());
 
         Instant now = Instant.now();
 
-        // 3. Danh sach session_id hien co trong DB
-        Set<String> existingIds = mongoTemplate.find(
-                new Query(), SessionEntity.class, "sessions"
-        ).stream()
-                .map(e -> e.getSessionId())
-                .collect(Collectors.toSet());
+        // 3. Xoa toan bo sessions cu
+        mongoTemplate.remove(new Query(), SessionEntity.class, "sessions");
+        log.info("[SessionService] Cleared old sessions.");
 
+        // 4. Insert all new sessions
         for (SessionGroup group : groups) {
             Instant lastRecordTime = group.endTime;
             boolean isActive = Math.abs(now.toEpochMilli() - lastRecordTime.toEpochMilli()) < SESSION_GAP_MS;
-
-            // Kiem tra xem phiên nay da ton tai chua
-            SessionEntity existing = findBySessionId(group.sessionId);
-
-            if (existing == null) {
-                // Phiên mới — insert
-                SessionEntity entity = buildEntity(group, isActive);
-                mongoTemplate.insert(entity, "sessions");
-                log.debug("[SessionService] Inserted new session: {}", group.sessionId);
-            } else if (existing.isActive() || needsUpdate(existing, group)) {
-                // Phiên active hoac co thay doi — cap nhat
-                updateEntity(existing, group, isActive);
-                mongoTemplate.save(existing, "sessions");
-                log.debug("[SessionService] Updated session: {}", group.sessionId);
-            }
+            SessionEntity entity = buildEntity(group, isActive);
+            mongoTemplate.insert(entity, "sessions");
         }
 
-        // 4. Danh sach session_id moi phat hien
-        Set<String> newIds = groups.stream()
-                .map(g -> g.sessionId)
-                .collect(Collectors.toSet());
-
-        // 5. Danh sach phiên can de-activate (ton tai nhung khong con trong final_result)
-        Set<String> toDeactivate = new HashSet<>(existingIds);
-        toDeactivate.removeAll(newIds);
-
-        for (String sid : toDeactivate) {
-            SessionEntity entity = findBySessionId(sid);
-            if (entity != null && entity.isActive()) {
-                entity.setActive(false);
-                entity.setUpdatedAt(now);
-                mongoTemplate.save(entity, "sessions");
-                log.debug("[SessionService] Deactivated session: {}", sid);
-            }
-        }
-
-        log.info("[SessionService] Session rebuild complete. Active sessions: {}",
-                groups.stream().filter(g -> {
-                    long diff = now.toEpochMilli() - g.endTime.toEpochMilli();
-                    return diff < SESSION_GAP_MS;
-                }).count());
+        log.info("[SessionService] Session rebuild complete. Inserted {} sessions. Active: {}",
+                groups.size(),
+                groups.stream().filter(g -> Math.abs(now.toEpochMilli() - g.endTime.toEpochMilli()) < SESSION_GAP_MS).count());
     }
 
     // ================================================================
@@ -306,21 +388,22 @@ public class SessionService {
 
     /**
      * Phat hien cac phiên tu danh sach documents.
-     * Gap > 15 phut giua 2 ban ghi lien tiep → phiên mới.
+     * Gap > 1 phut giua 2 ban ghi lien tiep (theo timestamp) → phiên mới.
+     * Session ID cố định: hash MD5(first_record_timestamp + first_record_device_id).
      */
     private List<SessionGroup> detectSessions(List<Document> docs) {
         List<SessionGroup> groups = new ArrayList<>();
         SessionGroup current = null;
 
         for (Document doc : docs) {
-            Instant ingestedAt = parseIngestedAt(doc.get("ingested_at"));
+            Instant ts = parseTimestamp(doc.get("timestamp"));
 
             if (current == null) {
-                current = new SessionGroup(UUID.randomUUID().toString(), ingestedAt);
-            } else if (Math.abs(ingestedAt.toEpochMilli() - current.endTime.toEpochMilli()) > SESSION_GAP_MS) {
-                // Gap > 15 phut → kết thúc phiên hiện tại, bắt đầu phiên mới
+                current = new SessionGroup(deriveSessionId(doc), ts);
+            } else if (Math.abs(ts.toEpochMilli() - current.endTime.toEpochMilli()) > SESSION_GAP_MS) {
+                // Gap > 1 phut → kết thúc phiên hiện tại, bắt đầu phiên mới
                 groups.add(current);
-                current = new SessionGroup(UUID.randomUUID().toString(), ingestedAt);
+                current = new SessionGroup(deriveSessionId(doc), ts);
             }
 
             current.addRecord(doc);
@@ -333,7 +416,51 @@ public class SessionService {
         return groups;
     }
 
-    /** Parse ingested_at (java.util.Date / Instant / LocalDateTime / String) */
+    /**
+     * Tao session ID cố định từ data thực tế của bản ghi đầu tiên trong phiên.
+     * Không dùng UUID.randomUUID() vì sẽ tạo ID mới mỗi lần rebuild → frontend 404.
+     */
+    private String deriveSessionId(Document firstRecord) {
+        String ts = firstRecord.getString("timestamp");
+        if (ts == null) {
+            Object ingested = firstRecord.get("ingested_at");
+            ts = ingested != null ? ingested.toString() : UUID.randomUUID().toString();
+        }
+        String deviceId = firstRecord.getString("device_id");
+        String key = (ts != null ? ts : "") + "|" + (deviceId != null ? deviceId : "");
+        return UUID.nameUUIDFromBytes(key.getBytes()).toString();
+    }
+
+    /**
+     * Parse trường timestamp (thời gian ESP32 gửi, Unix ms hoặc string).
+     * Fallback sang ingested_at nếu timestamp null.
+     */
+    private Instant parseTimestamp(Object value) {
+        if (value == null) {
+            return parseIngestedAt(null); // fallback
+        }
+        // Unix milliseconds
+        if (value instanceof Number n) {
+            return Instant.ofEpochMilli(n.longValue());
+        }
+        // String parse
+        try {
+            String s = value.toString().trim();
+            // ESP32 format: "yyyy:MM:dd - HH:mm:ss"
+            try {
+                LocalDateTime ldt = LocalDateTime.parse(s, TS_PARSE_FMT);
+                return ldt.toInstant(VN_ZONE);
+            } catch (Exception e) {
+                // Unix ms string
+                return Instant.ofEpochMilli(Long.parseLong(s));
+            }
+        } catch (Exception e) {
+            log.warn("[SessionService] Could not parse timestamp '{}', fallback to ingested_at", value);
+            return parseIngestedAt(null);
+        }
+    }
+
+    /** Parse ingested_at (java.util.Date / Instant / LocalDateTime / String) — chỉ dùng khi timestamp null */
     private Instant parseIngestedAt(Object value) {
         if (value == null) return Instant.now();
         if (value instanceof java.util.Date date) return date.toInstant();
@@ -412,15 +539,40 @@ public class SessionService {
     }
 
     private SessionDto toDtoWithRecords(SessionEntity entity) {
+        return toDtoWithRecords(entity, List.of());
+    }
+
+    /**
+     * Tra ve chi tiet 1 phiên (kem danh sach records) chi thuoc user devices.
+     */
+    private SessionDto toDtoWithRecords(SessionEntity entity, List<String> userMacs) {
         SessionDto dto = toDto(entity);
 
-        // Doc lai records tu final_result thuoc phiên nay
-        Instant start = entity.getStartTime();
-        Instant end = entity.getEndTime();
+        // Query final_result bang trường timestamp (String "yyyy:MM:dd - HH:mm:ss").
+        // timestamp là UTC+7, format này sort lexicographically = chronological order.
+        // Dùng [firstTs, lastTs] để bao trùm toàn bộ phiên.
+        Instant startUtc = entity.getStartTime();
+        Instant endUtc = entity.getEndTime();
 
-        Query query = new Query(
-                new org.springframework.data.mongodb.core.query.Criteria("ingested_at").gte(start).lte(end)
-        ).with(Sort.by(Sort.Direction.ASC, "ingested_at"));
+        // Chuyển UTC → UTC+7 để khớp với ESP32 timestamp
+        LocalDateTime startVn = LocalDateTime.ofInstant(startUtc, VN_ZONE);
+        LocalDateTime endVn = LocalDateTime.ofInstant(endUtc, VN_ZONE);
+
+        String startTsStr = startVn.format(TS_PARSE_FMT);
+        String endTsStr = endVn.format(TS_PARSE_FMT);
+
+        // Loc theo MAC neu co userMacs
+        org.springframework.data.mongodb.core.query.Criteria timeCriteria =
+                new org.springframework.data.mongodb.core.query.Criteria("timestamp")
+                        .gte(startTsStr)
+                        .lte(endTsStr);
+
+        if (!userMacs.isEmpty()) {
+            timeCriteria = timeCriteria.and("mac_address").in(userMacs);
+        }
+
+        Query query = new Query(timeCriteria)
+                .with(Sort.by(Sort.Direction.ASC, "timestamp"));
 
         List<Document> docs = mongoTemplate.find(query, Document.class, "final_result");
 
@@ -444,6 +596,7 @@ public class SessionService {
         record.setLabel(doc.getString("label"));
         record.setConfidence(toDouble(doc.get("confidence")));
         record.setIngestedAt(parseIngestedAt(doc.get("ingested_at")));
+        record.setMacAddress(doc.getString("mac_address"));
         // timestamp: try raw string field first, fallback to ingestedAt
         String tsStr = doc.getString("timestamp");
         if (tsStr != null && !tsStr.isBlank()) {
@@ -487,24 +640,31 @@ public class SessionService {
         }
 
         void addRecord(Document doc) {
-            Instant ingestedAt = parseInstant(doc.get("ingested_at"));
+            Instant ts = parseInstant(doc.get("timestamp"));
             records.add(doc);
-            if (ingestedAt.isAfter(endTime)) {
-                endTime = ingestedAt;
+            if (ts.isAfter(endTime)) {
+                endTime = ts;
             }
         }
 
+        /**
+         * Parse trường timestamp (ESP32 device time).
+         * Supports: Number (Unix ms), String (Unix ms or "yyyy:MM:dd - HH:mm:ss").
+         */
         Instant parseInstant(Object value) {
             if (value == null) return Instant.now();
-            if (value instanceof java.util.Date date) return date.toInstant();
-            if (value instanceof Instant i) return i;
-            if (value instanceof LocalDateTime ldt) return ldt.toInstant(ZoneOffset.UTC);
-            try { return Instant.parse(value.toString()); }
-            catch (Exception e) {
+            if (value instanceof Number n) {
+                return Instant.ofEpochMilli(n.longValue());
+            }
+            String s = value.toString().trim();
+            // ESP32 format "yyyy:MM:dd - HH:mm:ss" → parse as UTC+7
+            try {
+                LocalDateTime ldt = LocalDateTime.parse(s, TS_PARSE_FMT);
+                return ldt.toInstant(VN_ZONE);
+            } catch (Exception e) {
+                // Fallback: Unix ms string
                 try {
-                    // ESP32 format "yyyy:MM:dd - HH:mm:ss" → parse as UTC+7
-                    LocalDateTime ldt = LocalDateTime.parse(value.toString(), TS_PARSE_FMT);
-                    return ldt.toInstant(VN_ZONE);
+                    return Instant.ofEpochMilli(Long.parseLong(s));
                 } catch (Exception ex) {
                     return Instant.now();
                 }
